MESSAGE ( STATUS ${CMAKE_SOURCE_DIR} )

INCLUDE_DIRECTORIES ( ${CMAKE_SOURCE_DIR}/src )

INCLUDE_DIRECTORIES ( ${GTEST_INCLUDE_DIRS} )

ADD_EXECUTABLE ( AllTests
    AllTests.cc
    BFSTest.cc
    lightQueueTest.cc
    ${CMAKE_SOURCE_DIR}/src/bfs.h
    ${CMAKE_SOURCE_DIR}/src/light_queue.h
)

TARGET_LINK_LIBRARIES ( AllTests
    ${GTEST_LIBRARIES}
)

INSTALL (TARGETS AllTests DESTINATION bin)
